2013-07-17  Sergio Martin <sergio.martin@artica.es>

	* operation/menu.php
	operation/events/events_rss.php
	operation/events/export_csv.php
	operation/events/events_list.php
	operation/events/events.php
	operation/events/events.build_query.php
	general/shortcut_bar.php: Fixed group filter
	for bug #2346 and clean a lot of events code

2013-07-17  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Delete unnecessary ACL 
	check

	* images/up.png: Add missed image to new styles

2013-07-17 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php: fixed the default value for
	"prediction_module" in tagente_module.
	
	* include/graphs/functions_flot.php,
	include/graphs/functions_pchart.php,
	include/graphs/functions_gd.php, include/graphs/functions_utils.php,
	include/javascript/pandora_alerts.js,
	include/javascript/pandora_modules.js,
	include/javascript/pandora_events.js,
	include/functions_network_components.php: cleaned source code style.

2013-07-17  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/status_monitor.php
	operation/agentes/alerts_status.php
	godmode/alerts/configure_alert_template.php: Clean 
	useless ACL checks. Change header string by the same
	string but translated. Added to the alert templates
	wizard level combo the option No Wizard to avoid
	confussing

2013-07-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/planned_downtime.editor.php
	godmode/menu.php: Fix a planned downtime ACLS problem
	for bug #2305

2013-07-16  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_snmp_browser.php: Use version 2c by default. Some
	  OIDs may not be available for version 1 queries.

2013-07-16  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_delete_alerts.php: Fixed an 
	ajax call to retrieve the agents associated to an alert 
	template in massive alerts deletion for bug #2282

2013-07-16  Sergio Martin <sergio.martin@artica.es>
