@@ -808,4 +808,26 @@ function users_can_manage_group_all($id_group = 0) {
 	
 	return false;
 }
+
+/**
+ * Get the users that belongs to the same groups of the current user
+ * 
+ * @return mixed Array with id_user as index and value
+ */
+function users_get_user_users() {
+	global $config;
+	
+	$user_groups = users_get_groups();
+
+	$user_users = array();
+	foreach($user_groups as $id_user_group => $name_user_group) {
+		$group_users = groups_get_users($id_user_group, false, true);
+		
+		foreach($group_users as $gu) {
+			$user_users[$gu['id_user']] = $gu['id_user'];
+		}
+	}
+	
+	return $user_users;
+}
 ?>
